--- a/A-not-A.tex
+++ b/A-not-A.tex
@@ -254,7 +254,7 @@ the structure itself. In other words, {\anota} always bears focus
 \subsection{Headedness}
 \label{ssec:head}
 
-
+This section is about the headedness of A-not-A.
 
 \subsection{Character}
 \label{ssec:char}
