--- a/A-not-A-tags.tex
+++ b/A-not-A-tags.tex
@@ -6,11 +6,27 @@
 \@fd@f {exe:vnotv.abab2} {{{\char 100}}{{1\char 100}}}
 \@fd@f {exe:anota} {{2}} 
 \@fd@f {exe:pnotp} {{3}} 
-\@fd@f {exe:yesno} {{4}} 
-\@fd@f {exe:scope} {{5}} 
-\@fd@f {exe:scope.anota} {{{\char 97}}{{5\char 97}}}
-\@fd@f {exe:scope.yesno} {{{\char 98}}{{5\char 98}}}
-\@fd@f {avm:vjp} {{6}}
-\@fd@f {avm:xihuan} {{7}} 
-\@fd@f {avm:xihuan.xi} {{{\char 97}}{{7\char 97}}}
-\@fd@f {avm:xihuan.xihuan} {{{\char 98}}{{7\char 98}}}
+\@fd@f {exe:neg} {{4}} 
+\@fd@f {exe:neg.bu} {{{\char 97}}{{4\char 97}}}
+\@fd@f {exe:neg.mei} {{{\char 98}}{{4\char 98}}}
+\@fd@f {exe:yesno} {{5}} 
+\@fd@f {exe:scope} {{6}} 
+\@fd@f {exe:scope.anota} {{{\char 97}}{{6\char 97}}}
+\@fd@f {exe:scope.yesno} {{{\char 98}}{{6\char 98}}}
+\@fd@f {exe:shide} {{7}} 
+\@fd@f {exe:shide.a} {{{\char 97}}{{7\char 97}}}
+\@fd@f {exe:shide.b} {{{\char 98}}{{7\char 98}}}
+\@fd@f {exe:shide.c} {{{\char 99}}{{7\char 99}}}
+\@fd@f {fig:aspect} {{8}}
+\@fd@f {tdl:lzg} {{9}} 
+\@fd@f {avm:vjp} {{10}}
+\@fd@f {avm:xihuan} {{11}} 
+\@fd@f {avm:xihuan.xi} {{{\char 97}}{{11\char 97}}}
+\@fd@f {avm:xihuan.xihuan} {{{\char 98}}{{11\char 98}}}
+\@fd@f {avm:super} {{12}}
+\@fd@f {avm:neg} {{13}} 
+\@fd@f {avm:neg.bu} {{{\char 97}}{{13\char 97}}}
+\@fd@f {avm:neg.mei} {{{\char 98}}{{13\char 98}}}
+\@fd@f {avm:basic} {{14}}
+\@fd@f {avm:contracted} {{15}}
+\@fd@f {avm:ab} {{16}}
