--- a/pdf/vjp.tex
+++ b/pdf/vjp.tex
@@ -10,12 +10,14 @@
 
 \begin{avm}
 \[ \avmspan{\it +vjp}	\\
+STEM & \@{1}\ \\ 
 BOUND & {\it luk} 	\\ 
-CHAR & \[ \avmspan{\it char} \\
-		FCHAR & {\it string} 	\\ 
-		WCHAR & {\it list} \\ 
-		LENGTH & {\it length } \\ \]	\\ 
-\]
+HEAD & \[ CHAR & \[ \avmspan{\it char} \\
+					FCHAR & {\it string} 	\\ 
+					WCHAR & \@{1}\ \\ 
+					LENGTH & {\it length } \\ \] \\
+		P-KEY & \@{2}\ \] \\
+PRED &  \@{2}\ \\ \]
 \end{avm}
 
 \end{document}
