--- a/A-not-A-tags.tex
+++ b/A-not-A-tags.tex
@@ -28,5 +28,8 @@
 \@fd@f {avm:neg.bu} {{{\char 97}}{{13\char 97}}}
 \@fd@f {avm:neg.mei} {{{\char 98}}{{13\char 98}}}
 \@fd@f {avm:basic} {{14}}
-\@fd@f {avm:contracted} {{15}}
-\@fd@f {avm:ab} {{16}}
+\@fd@f {exe:out} {{15}} 
+\@fd@f {exe:out.a} {{{\char 97}}{{15\char 97}}}
+\@fd@f {exe:out.b} {{{\char 98}}{{15\char 98}}}
+\@fd@f {avm:contracted} {{16}}
+\@fd@f {avm:ab} {{17}}
