--- a/A-not-A.tex
+++ b/A-not-A.tex
@@ -355,6 +355,8 @@ means a lexical entry will have three variants: (i) its normal form,
 {\anota} form.
 
 
+
+
 \subsection{Co-occurring Constraints}
 \label{ssec:cooccurring}
 
@@ -524,6 +526,17 @@ they take the same \textsc{pred} value.
 \label{sec:forms}
 
 
+\begin{figure*}[!t]
+\centering
+\includegraphics[scale=.8]{pdf/tree1.pdf}
+\mbox{ }~\mbox{ }~\mbox{ } 
+\includegraphics[scale=.8]{pdf/mrs.pdf}
+\caption{A sample derivation}
+\label{fig:tree1}
+\end{figure*}
+
+
+
 
 \subsection{\textsc{A-not-A}}
 \label{ssec:basic}
@@ -538,6 +551,52 @@ they take the same \textsc{pred} value.
 \includegraphics[scale=.8]{pdf/basic.pdf}
 \xe}
 \vspace{-20pt}
+
+
+%% {\small 
+%% \ex\deftagex{fig:tree}
+%% \vspace{-10pt}
+%% \newline
+%% \includegraphics[scale=.8]{pdf/tree1.pdf}
+%% \xe}
+%% \vspace{-20pt}
+
+
+%% {\small 
+%% \ex\deftagex{avm:mrs}
+%% \vspace{-10pt}
+%% \newline
+%% \includegraphics[scale=.8]{pdf/mrs.pdf}
+%% \xe}
+%% \vspace{-20pt}
+
+
+
+
+
+
+
+
+{\small 
+\CJK{UTF8}{gkai}{
+\pex<exe:out>
+\a<a> \ljudge*
+\begingl[glspace=.5em]
+\gla 张三 讨厌 不 喜欢 狗 ？//
+\glb Zh\={a}ngs\={a}n taoy\`{a}n b\`{u} xihu\={a}n gou ?//
+\glc Zhangsan hate \textsc{not} like dog \textsc{pu}//
+\glft `(lit.) Does Zhangsan hate or not like dogs?'//
+\endgl
+\a<b> \ljudge*
+\begingl[glspace=.5em]
+\gla 张三 喜 不 喜 狗 ？//
+\glb Zh\={a}ngs\={a}n xi b\`{u} xi gou ?//
+\glc Zhangsan like \textsc{not} like dog  \textsc{pu}//
+\glft `Does Zhangsan like or not like dogs?' // 
+\endgl
+\xe}}
+\vspace{-20pt}
+
 
 
 \subsection{\textsc{A\ensuremath{^\prime}-not-A}}
