--- a/pdf/super.tex
+++ b/pdf/super.tex
@@ -10,24 +10,24 @@
 
 \begin{avm}
 \[ \avmspan{\it a-not-a-adv-lex}	\\
+INDEX & \@{1}\  \\ 
 POSTHEAD & \ensuremath{+}\\
 MOD & \< \[ \avmspan{\it +vjp} \\
 				SF & {\it ques}\\
-				P-KEY & \@{1}\ \\
-				ASPECT & \@{2}\ \\
-				SUBJ & \@{3}\ 	\\ 
-				COMPS & \@{4}\ 	\\ 
-				LZG & \@{5}\  \\ 
-				INDEX & \@{6}\  \\ \]	\> \\ 
+				P-KEY & \@{2}\ \\
+				ASPECT & \@{3}\ \\
+				SUBJ & \@{4}\ 	\\ 
+				COMPS & \@{5}\ 	\\ 
+				LZG & \@{6}\  \\\]	\> \\ 
 COMPS & \< \[ \avmspan{\it +vjp} \\
-				P-KEY & \@{1}\ \\
-				ASPECT & \@{2}\ \\
-				SUBJ & \@{3}\ 	\\ 
-				COMPS & \@{4}\ 	\\
-				LZG & \@{5}\  \\ 	\]	\> \\ 
+				P-KEY & \@{2}\ \\
+				ASPECT & \@{3}\ \\
+				SUBJ & \@{4}\ 	\\ 
+				COMPS & \@{5}\ 	\\
+				LZG & \@{6}\  \\ 	\]	\> \\ 
 ICONS & \<! \[ \avmspan{\it focus} \\
-				IARG1 & \@{6}\ \\ 
-				IARG2 & \@{6}\ \\ \] \mbox{} !\>	\\ 
+				IARG1 & \@{1}\ \\ 
+				IARG2 & \@{1}\ \\ \] \mbox{} !\>	\\ 
 \]
 \end{avm}
 
